# owner-signal-router

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  skills.md
schema/: owner-signal-router.concept.schema
src/: lib.rs
tests/: round_trip.rs
