[package]
name         = "owner-signal-router"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-router"
description  = "OwnerSignal contract for privileged PersonaRouter channel-policy orders."
publish      = false

[lib]
name = "owner_signal_router"
path = "src/lib.rs"

[dependencies]
signal-frame        = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona-origin = { git = "https://github.com/LiGoldragon/signal-persona-origin.git", branch = "main" }
nota-codec          = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv                = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror           = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

